# goqtgrpc

./: .gitignore  CMakeLists.txt  ConfigModule.qml  Main.qml  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.cpp  qmldir  resources.qrc
api/proto/locationsvc/v1/: pos.proto
cmd/locationsrv/: main.go
cposlib/: cposlib.go  poslib.go  poslib.h
locationsrv/: srv.go
locationsvc/v1/: MygRPCLib.qmltypes  goqtgrpc_plugin_qml_module_dir_map.qrc  qmldir
